@@ -5435,6 +5435,30 @@ SEXP R_igraph_cited_type_game(SEXP pnodes, SEXP pedges, SEXP ptypes,
 }
 			      
 
+SEXP R_igraph_citing_cited_type_game(SEXP pnodes, SEXP ptypes, SEXP ppref,
+				     SEXP pedges, SEXP pdirected) {
+  igraph_t g;
+  igraph_integer_t nodes=REAL(pnodes)[0];
+  igraph_integer_t edges=REAL(pedges)[0];
+  igraph_vector_t types;
+  igraph_matrix_t pref;
+  igraph_bool_t directed=LOGICAL(pdirected)[0];
+  SEXP result;
+  
+  R_igraph_before();
+  
+  R_SEXP_to_vector(ptypes, &types);
+  R_SEXP_to_matrix(ppref, &pref);
+  igraph_citing_cited_type_game(&g, nodes, &types, &pref, edges, directed);
+  PROTECT(result=R_igraph_to_SEXP(&g));
+  igraph_destroy(&g);
+  
+  R_igraph_after();
+  
+  UNPROTECT(1);
+  return result;
+}
+
 /***********************************************/
 /* THE REST IS GENERATED BY inger.py           */
 /***********************************************/
